# blast-extract

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-debug  README.md  requirements.txt  setup.cfg
scripts/: extract-alleles.py  hash-alleles.py
src/blast_extract/: __init__.py  __main__.py  blasting.py  blastresult.py  compare_hashes.py  extract_sequences.py  hash_sequences.py  seqtools.py
tests/: test_blastresult.py  test_extract_sequences.py
tests/data/achromobacter_dataset/: references.fasta
