[metadata]
name = blast-extract
version = 0.0.1
author = Jan Deneweth
author_email = jandeneweth@hotmail.com
description = Provides tools to extract nucleotide sequences from a genome using NCBI BLAST
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jandeneweth/blast-extract
project_urls =
    Bug Tracker = https://github.com/jandeneweth/blast-extract/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    extract-sequences = blast_extract.extract_sequences
    hash-sequences = blast_extract.hash_sequences